data/derived/sp14/progs/unify/prog3465.ml.out
Characters 282-290:
  | 5 -> buildAverage ( if (depth = 0) then buildX() else build(rand, depth - 1), if (depth = 0) then buildY() else build(rand, depth - 1))
                                            ^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * expr
